| Bug #47629 | error-log to ndbmtd is not informative enough | ||
|---|---|---|---|
| Submitted: | 24 Sep 2009 17:32 | Modified: | 25 Sep 2009 7:16 |
| Reporter: | Jonas Oreland | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Cluster: Cluster (NDB) storage engine | Severity: | S3 (Non-critical) |
| Version: | mysql-5.1-telco-7.0 | OS: | Any |
| Assigned to: | Jonas Oreland | CPU Architecture: | Any |
[24 Sep 2009 17:32]
Jonas Oreland
[24 Sep 2009 17:36]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/84545 3037 Jonas Oreland 2009-09-24 ndb - bug#47629 Improve content of error log when generated from ndbmtd (also fix bug when crash in fs/watch-thread happens, in which too much stack is used e.g switch Signal => SignalT<25>)
[24 Sep 2009 18:11]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/84555 3038 Jonas Oreland 2009-09-24 ndb - bug#47629 Improve content of error log when generated from ndbmtd (also fix bug when crash in fs/watch-thread happens, in which too much stack is used e.g switch Signal => SignalT<25>)
[24 Sep 2009 18:59]
Jonas Oreland
7.0.8 and 7.1
[25 Sep 2009 7:16]
Jon Stephens
Documented bugfix in the NDB-7.0.8 changelog as follows:
Two issues with error logs generated by ndbmtd were addressed:
1. The version string was sometimes truncated, or even not
shown, depending on the number of threads in use (the more
threads, the worse the problem). Now the version string is
shown in full, as well as the filenames for all tracefiles
(where available).
2. In the event of a crash, the thread number of the thread
that crashed was not printed. Now this information is
supplied, if available.
Closed.
[30 Sep 2009 8:14]
Bugs System
Pushed into 5.1.37-ndb-7.0.9 (revid:jonas@mysql.com-20090930075942-1q6asjcp0gaeynmj) (version source revid:jonas@mysql.com-20090924181121-c9u0uvtqqsxp3ndu) (merge vers: 5.1.37-ndb-7.0.8) (pib:11)
[30 Sep 2009 8:15]
Bugs System
Pushed into 5.1.35-ndb-7.1.0 (revid:jonas@mysql.com-20090930080049-1c8a8cio9qgvhq35) (version source revid:jonas@mysql.com-20090924183342-t0szmlwi3hrzgw4s) (merge vers: 5.1.35-ndb-7.1.0) (pib:11)
