ndb - bug#47629   Improve content of error log when generated from ndbmtd   (also fix bug when crash in fs/watch-thread happens, in which    too much stack is used e.g switch Signal => SignalT<25>)