storage/ndb/src/kernel/vm/mt.cpp
@@ -3888,7 +3888,7 @@ FastScheduler::dumpSignalMemory(Uint32 thr_no, FILE* out)
     if (seq_end == 0)
       seq_end = MAX_SIGNALS_TO_DUMP;
     seq_end--;
-    Signal signal;
+    SignalT<25> signal;
     const SignalHeader *s = signalSequence[seq_end].ptr;
     unsigned siglen = (sizeof(*s)>>2) + s->theLength;
     if (siglen > 25)
@@ -3926,6 +3926,23 @@ FastScheduler::dumpSignalMemory(Uint32 thr_no, FILE* out)
                                            &signal.theData[0]);
   }
   fflush(out);
+}
+
+int
+FastScheduler::traceDumpGetCurrentThread()
+{
+  void *value= NdbThread_GetTlsKey(NDB_THREAD_TLS_THREAD);
+  const thr_data *selfptr = reinterpret_cast<const thr_data *>(value);
+
+  /* The selfptr might be NULL, or pointer to thread that crashed. */
+  if (selfptr == 0)
+  {
+    return -1;
+  }
+  else
+  {
+    return (int)selfptr->m_thr_no;
+  }
 }
 
 void
